# quantization_lib

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: centerpoint.hpp  centerpoint_config.hpp  circle_nms_kernel.hpp  cuda_utils.hpp  geometry_utils.hpp  logging.hpp  network_trt.hpp  postprocess_kernel.hpp  preprocess_kernel.hpp  scatter_kernel.hpp  simple_profiler.hpp  tensorrt.hpp  tensorrt_wrapper.hpp  timer.hpp  utils.hpp  voxel_generator.hpp
model/: cal_encoder.txt  cal_head.txt  pts_voxel_encoder_centerpoint.engine
scripts/: vis.py
src/: centerpoint.cpp  circle_nms_kernel.cu  network_trt.cpp  postprocess_kernel.cu  preprocess_kernel.cu  scatter_kernel.cu  simple_profiler.cpp  tensorrt.cpp  tensorrt_common.cc  tensorrt_wrapper.cpp  utils.cpp  voxel_generator.cpp
